# projeto-flask

./: .gitignore  README.md
.github/workflows/: python-app.yml
content_aulas/: lifetime.py  models.py  objects.py  produto.py  wsgi.py  wsig_py3.py
frontend/: README.md
natal_delivery/: Makefile  README.md  pyproject.toml  requirements.txt  settings.toml
natal_delivery/delivery_natal/: app.py  views.py
natal_delivery/migrations/versions/: 6e9c3c4e550a_initial_migrate.py  abacff4401dc_add.py  cd04d9219502_add_promotion.py
natal_delivery/natal_delivery/: app.py  views.py
natal_delivery/natal_delivery/ext/: cli.py  hooks.py  migrate.py
natal_delivery/natal_delivery/ext/admin/: __init__.py  views.py
natal_delivery/natal_delivery/ext/auth/: __init__.py  admin.py  controller.py  form.py  models.py
natal_delivery/natal_delivery/ext/cli/: __init__.py
natal_delivery/natal_delivery/ext/config/: __init__.py
natal_delivery/natal_delivery/ext/db/: models.py
natal_delivery/natal_delivery/ext/site/: controllers.py  main.py  models.py
natal_delivery/natal_delivery/templates/: about.html  app.css  base.html  index.html  menu.html  userform.html
natal_delivery/natal_delivery/templates/macros/: list_item.html
natal_delivery/tests/: conftest.py  test_app.py
