[tool.poetry]
name = "curso-flask1"
version = "0.1.0"
description = ""
authors = ["pinheir0g <gv.pinheiro@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
isort = "^5.10.1"



[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
