[tool.poetry]
name = "natal_delivery"
version = "0.1.0"
description = ""
authors = ["pinheir0g <gv.pinheiro@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Admin = "^1.6.0"



[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
ipython = "^8.4.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-flask = "^1.2.0"
flake8 = "^4.0.1"
flask-shell-ipython = "^0.4.1"
Flask-DebugToolbar = "^0.13.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
